leb 1 deff task done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Puzzle15">
         <activity
+            android:name=".WinScreen"
+            android:exported="true" />
+        <activity
             android:name=".CustomGameActivity"
             android:exported="true" />
         <activity
