--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
             android:name=".WinScreen"
             android:exported="true" />
         <activity
+            android:name=".ResultActivity"
+            android:exported="true" />
+        <activity
             android:name=".CustomGameActivity"
             android:exported="true" />
         <activity
