--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme_Green">
         <activity
-            android:name=".ChoseLibraryPicture"
+            android:name=".SettingsChoseLibraryPicture"
             android:exported="true" />
         <activity
             android:name=".HighScoreViewActivity"
