--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme_Green">
         <activity
+            android:name=".RandomGameActivityAI"
+            android:exported="true" />
+        <activity
             android:name=".Test1Activity"
             android:exported="true" />
         <activity
